# thermalright_digital_lcd

./: README.md  config.json  pyproject.toml
src/thermalright_digital_lcd/: config.py  utils.py
