[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "thermalright-hid-digital-lcd-controller"
version = "1.0"
dependencies = [
  "numpy",
  "hid",
  "psutil",
  "pyamdgpuinfo",
]
requires-python = ">= 3.8"
readme = "README.md"

[tool.hatch.build.targets.wheel]
packages = ["src/thermalright_digital_lcd"]
